# JapanesePassAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/agent/: graph.py  tools.py
backend/api/: deps.py  exam_export.py  main.py
backend/api/routers/: admin.py  agent.py  auth.py  chat_sessions.py  exams.py  questions.py  stats.py
backend/config/: __init__.py  categories.py
backend/db/: chat_repo.py
backend/schemas/: admin.py  agent.py  exam.py  question.py  stats.py  user.py
backend/services/: __init__.py  exam_builder.py  exam_planner.py  stats_service.py
backend/utils/: security.py
crawler/: config.py
crawler/db/: schema.sql
crawler/llm/: validate.py
crawler/spiders/: auth.py  spider.py  test_type_1.py  test_type_10.py  test_type_2.py  test_type_3.py  test_type_4.py  test_type_5.py  test_type_6.py  test_type_7.py  test_type_8.py  test_type_9.py  write_to_mysql.py
data/raw/: result_67.json  result_67_validated.json  result_68.json  result_68_validated.json  result_69.json  result_70.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
scripts/: create_admin.py  migrate_category.py  migrate_chat.py  migrate_clean_marked.py  migrate_is_active.py
student/: index.html  package-lock.json  package.json  vite.config.js
student/src/: App.vue  main.js  theme.css
tests/: conftest.py  test_auth.py  test_chat_repo.py  test_cloze_exam.py  test_questions.py  test_security.py  test_sessions.py  test_smart_exam.py  test_whole_exam.py
(+28 files in other folders)
