[project]
name = "japanesepassagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.115",
    "lxml>=6.0.2",
    "pymysql>=1.1.2",
    "requests>=2.33.0",
    "uvicorn[standard]>=0.34",
]
