[project]
name = "japanesepassagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.115",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "lxml>=6.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]
